--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,10 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
-VERILOG_SOURCES += $(PWD)/../hdl/dut.v
+VERILOG_SOURCES += $(PWD)/../hdl/ifc_rtl.v
 VERILOG_SOURCES += $(PWD)/../hdl/FIFO1.v
 VERILOG_SOURCES += $(PWD)/../hdl/FIFO2.v
-TOPLEVEL = dut
-MODULE = dut_test
+VERILOG_SOURCES += $(PWD)/wrappers/ifc_test.v
+ifc:
+	rm -rf sim_build
+	$(MAKE) sim MODULE=ifc_test TOPLEVEL=ifc_test
 include $(shell cocotb-config --makefiles)/Makefile.sim
